--- a/latex/karen.tex
+++ b/latex/karen.tex
@@ -49,14 +49,14 @@
 %\include{introduction}
 %\include{rbffd_method}
 %\include{ordering_and_preconditioning}
-\include{gpu_solver}
+%\include{gpu_solver}
 \include{distributed_solver}
 
 %\include{explicit_pde_solutions}
 %\include{implicit_pde_solutions}
 %\include{publications}
 
-\include{conclusions}
+%\include{conclusions}
 
 %\appendix
 %\include{rbffd_avoid_pole_singularities}
@@ -77,7 +77,9 @@
 % Or individually reference papers you want to include without citation: 
 %\nocite{Vuduc2005}
 
-\bibliographystyle{plain}
+
+%TODO: Make sure that we obey formatting rules on refs: • Web sites must not be blue, underlined, or contain an active hyperlink (see p. 10).
+\bibliographystyle{acm}
 \bibliography{merged_references}
 
 %\input{biography.tex}
