--- a/latex/merged_references.bib
+++ b/latex/merged_references.bib
@@ -2,12 +2,21 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Evan Bollig at 2013-09-29 03:15:03 -0500 
+%% Created for Evan Bollig at 2013-09-29 13:43:40 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@misc{BolligRBFFDCode,
+	Author = {E. F. Bollig},
+	Date-Added = {2013-09-29 18:40:31 +0000},
+	Date-Modified = {2013-09-29 18:43:38 +0000},
+	Howpublished = {\url{https://github.com/bollig/rbffd_gpu}},
+	Month = {Sep},
+	Title = {Radial Basis Function Finite Differences on the GPU},
+	Year = {2013}}
 
 @techreport{CHACO1995,
 	Author = {Bruce Hendrickson AND Robert Leland},
